--- a/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout0045.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/ShipmentCustomer/m_inout0045m/m_inout0045.jrxml
@@ -1314,7 +1314,7 @@ WHERE m_inout."m_inout_id" = $P{RECORD_ID}]]>
 		</band>
 	</pageFooter>
 	<lastPageFooter>
-		<band height="253">
+		<band height="290">
 			<frame>
 				<reportElement x="0" y="57" width="318" height="51" isRemoveLineWhenBlank="true" uuid="5337f585-0a42-4758-a009-227092f9db40">
 					<printWhenExpression><![CDATA[(($F{c_bpartner_lit_bpreport_param}.charAt(0)) == 'Y')]]></printWhenExpression>
@@ -1660,11 +1660,16 @@ A RENDERE]]></text>
 				</textField>
 			</frame>
 			<staticText>
-				<reportElement x="0" y="210" width="555" height="42" uuid="212b995e-fe2c-4d05-8d07-782490eecbde"/>
-				<textElement verticalAlignment="Bottom">
+				<reportElement x="0" y="210" width="555" height="80" uuid="212b995e-fe2c-4d05-8d07-782490eecbde"/>
+				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font size="8"/>
 				</textElement>
-				<text><![CDATA[CONDIZIONI DI VENDITA: 1) La merce viaggia a rischio e pericolo del Committente anche se venduta franco destino. - 2) Prima di ritirare la merce verificare il peso, il quantitativo ed il perfetto stato dei colli. - 3) Non si accettano reclami dopo otto giorni dal ricevimento della merce. - 4) Per ogni contestazione si intende competente il Foro di Patti. - 6) Sui ritardati pagamenti decorrono gli interessi bancari per legge. - 7) Non si accettano sconti o arrotondamenti.]]></text>
+				<text><![CDATA[CONDIZIONI DI VENDITA: 1) La merce viaggia a rischio e pericolo del Committente anche se venduta franco destino. - 2) Prima di ritirare la merce verificare il peso, il quantitativo ed il perfetto stato dei colli. - 3) Non si accettano reclami dopo otto giorni dal ricevimento della merce. - 4) Per ogni contestazione si intende competente il Foro di Patti. - 6) Sui ritardati pagamenti decorrono gli interessi bancari per legge. - 7) Non si accettano sconti o arrotondamenti.
+
+CONTRIBUOTO CONOE - CONAI ASSOLTO OVE DOVUTO
+
+Assolve gli obblighi di cui all'art. 62, comma 1, del decreto legge 24 gennaio 2012, n. 1, convertito, con modificazioni, della legge 24 marzo 2012, n. 27.
+]]></text>
 			</staticText>
 		</band>
 	</lastPageFooter>
