--- a/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice_withholding_sub_payschedule.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice_withholding_sub_payschedule.jrxml
@@ -33,16 +33,26 @@ order by  c_invoicepayschedule."duedate"]]>
 	<title>
 		<band height="15">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
-			<staticText>
-				<reportElement mode="Opaque" x="0" y="0" width="190" height="15" forecolor="#FF0400" backcolor="#BDBDBD" uuid="9fafb163-cb5a-4f23-9b10-72bfbed18d08"/>
+			<frame>
+				<reportElement x="0" y="0" width="190" height="15" uuid="2a101049-8bda-491c-91c7-1c647a2b9d98"/>
 				<box>
-					<pen lineWidth="0.5" lineColor="#000000"/>
+					<pen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[SCADENZE]]></text>
-			</staticText>
+				<staticText>
+					<reportElement mode="Opaque" x="0" y="0" width="190" height="15" forecolor="#000000" backcolor="#FF9933" uuid="9fafb163-cb5a-4f23-9b10-72bfbed18d08"/>
+					<box>
+						<pen lineWidth="0.5" lineColor="#000000"/>
+						<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement textAlignment="Center" verticalAlignment="Middle">
+						<font size="8" isBold="true"/>
+					</textElement>
+					<text><![CDATA[SCADENZE]]></text>
+				</staticText>
+			</frame>
 		</band>
 	</title>
 	<columnHeader>
@@ -53,24 +63,24 @@ order by  c_invoicepayschedule."duedate"]]>
 				<box>
 					<pen lineWidth="0.5"/>
 				</box>
-				<textField isBlankWhenNull="true">
-					<reportElement positionType="Float" mode="Transparent" x="95" y="0" width="95" height="15" forecolor="#333333" backcolor="#FFFFFF" uuid="9418da4c-8cab-4058-900a-726dfeedf900"/>
+				<staticText>
+					<reportElement positionType="Float" mode="Transparent" x="95" y="0" width="95" height="15" forecolor="#333333" backcolor="#FFFFFF" uuid="8bfc9c7e-6bc9-4aaf-90c3-c30fa6593e24"/>
 					<box rightPadding="5"/>
 					<textElement textAlignment="Right" verticalAlignment="Middle" rotation="None" markup="none">
-						<font fontName="SansSerif" size="10" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+						<font fontName="SansSerif" size="8" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
 						<paragraph lineSpacing="Single"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$P{RESOURCE}.getString("payschedule_dueamt_"+$P{AD_LANGUAGE})]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement positionType="Float" x="0" y="0" width="95" height="15" forecolor="#333333" uuid="096da98e-f7e2-43df-bb34-ab6960f8d169"/>
+					<text><![CDATA[SCADENZA]]></text>
+				</staticText>
+				<staticText>
+					<reportElement positionType="Float" x="0" y="0" width="95" height="15" forecolor="#333333" uuid="43f3e675-43dd-4746-8521-9facdbee5eaf"/>
 					<box leftPadding="5"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle" markup="none">
-						<font fontName="SansSerif" size="10" isBold="true"/>
+						<font fontName="SansSerif" size="8" isBold="true"/>
 						<paragraph lineSpacing="Single"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$P{RESOURCE}.getString("payschedule_duedate_"+$P{AD_LANGUAGE})]]></textFieldExpression>
-				</textField>
+					<text><![CDATA[IMPORTO]]></text>
+				</staticText>
 			</frame>
 		</band>
 	</columnHeader>
@@ -86,16 +96,16 @@ order by  c_invoicepayschedule."duedate"]]>
 					<reportElement positionType="Float" x="0" y="0" width="95" height="15" uuid="c27120cc-da36-4c16-b05e-d845b2f7a393"/>
 					<box leftPadding="5"/>
 					<textElement textAlignment="Left" verticalAlignment="Middle">
-						<font fontName="SansSerif" size="10"/>
+						<font fontName="SansSerif" size="8"/>
 						<paragraph lineSpacing="Single"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{c_invoicepayschedule_dueamt}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" pattern="dd - MM - yyyy" isBlankWhenNull="true">
+				<textField isStretchWithOverflow="true" pattern="dd-MM-yyyy" isBlankWhenNull="true">
 					<reportElement positionType="Float" x="95" y="0" width="95" height="15" uuid="a7f5fb6d-c9d1-4360-9719-fe5ac03508a7"/>
 					<box rightPadding="5"/>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font fontName="SansSerif" size="10"/>
+						<font fontName="SansSerif" size="8"/>
 						<paragraph lineSpacing="Single"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{c_invoicepayschedule_duedate}]]></textFieldExpression>
