--- a/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice_withholding_sub_vat.jrxml
+++ b/04.CicloAttivo_QuotetoInvoice/Invoice/c_invoice0042m/c_invoice_withholding_sub_vat.jrxml
@@ -1,146 +1,143 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.8.0.final utlizzo versione della libreria JasperReports6.8.0-2ed8dfabb690ff337a5797129f2cd92902b0c87b  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="c_invoice_withholding_sub_vat" pageWidth="190" pageHeight="60" whenNoDataType="AllSectionsNoDetail" columnWidth="190" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="4c8f36cd-baba-4cde-91f5-8934be944fd3">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="c_invoice_withholding_sub_vat" pageWidth="190" pageHeight="58" whenNoDataType="AllSectionsNoDetail" columnWidth="190" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="25ddd7c1-15b6-4842-8b87-d5aa5e04d31f">
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="id prod"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="iDempiere_Produzione"/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<parameter name="RECORD_ID" class="java.math.BigDecimal">
+	<parameter name="RECORD_ID" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="RESOURCE" class="java.util.PropertyResourceBundle" isForPrompting="false"/>
 	<parameter name="AD_LANGUAGE" class="java.lang.String" isForPrompting="false"/>
 	<queryString>
 		<![CDATA[SELECT
-     lit_c_order_tax."c_ordertax_c_order_id" AS lit_c_order_tax_c_order_id,
-     lit_c_order_tax."c_tax_taxindicator" AS lit_c_order_tax_c_tax_taxindicator,
-     lit_c_order_tax."c_ordertax_taxbaseamt" AS lit_c_order_tax_c_ordertax_taxbaseamt,
-     lit_c_order_tax."c_ordertax_taxamt" AS lit_c_order_tax_c_ordertax_taxamt
+     lit_c_invoice_tax."c_invoice_id" AS lit_c_invoice_tax_c_invoice_id,
+     lit_c_invoice_tax."c_tax_taxindicator" AS lit_c_invoice_tax_c_tax_taxindicator,
+     lit_c_invoice_tax."c_invoicetax_taxbaseamt" AS lit_c_invoice_tax_c_invoicetax_taxbaseamt,
+     lit_c_invoice_tax."c_invoicetax_taxamt" AS lit_c_invoice_tax_c_invoicetax_taxamt,
+     lit_c_invoice_tax."c_tax_name" AS lit_c_invoice_tax_c_tax_name,
+     lit_c_invoice_tax."c_tax_note" AS lit_c_invoice_tax_c_tax_note,
+     lit_c_invoice_tax."c_tax_description" AS lit_c_invoice_tax_c_tax_description
 FROM
-     "adempiere"."lit_c_order_tax" lit_c_order_tax
+     "adempiere"."lit_c_invoice_tax" lit_c_invoice_tax
 WHERE
-lit_c_order_tax."c_ordertax_c_order_id" = $P{RECORD_ID}]]>
+     lit_c_invoice_tax."c_invoice_id" = $P{RECORD_ID}]]>
 	</queryString>
-	<field name="lit_c_order_tax_c_order_id" class="java.math.BigDecimal">
-		<property name="com.jaspersoft.studio.field.label" value="lit_c_order_tax_c_order_id"/>
-		<property name="com.jaspersoft.studio.field.tree.path" value="lit_c_order_tax"/>
+	<field name="lit_c_invoice_tax_c_invoice_id" class="java.math.BigDecimal">
+		<property name="com.jaspersoft.studio.field.label" value="lit_c_invoice_tax_c_invoice_id"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_c_invoice_tax"/>
 	</field>
-	<field name="lit_c_order_tax_c_tax_taxindicator" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.label" value="lit_c_order_tax_c_tax_taxindicator"/>
-		<property name="com.jaspersoft.studio.field.tree.path" value="lit_c_order_tax"/>
+	<field name="lit_c_invoice_tax_c_tax_taxindicator" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="lit_c_invoice_tax_c_tax_taxindicator"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_c_invoice_tax"/>
 	</field>
-	<field name="lit_c_order_tax_c_ordertax_taxbaseamt" class="java.math.BigDecimal">
-		<property name="com.jaspersoft.studio.field.label" value="lit_c_order_tax_c_ordertax_taxbaseamt"/>
-		<property name="com.jaspersoft.studio.field.tree.path" value="lit_c_order_tax"/>
+	<field name="lit_c_invoice_tax_c_invoicetax_taxbaseamt" class="java.math.BigDecimal">
+		<property name="com.jaspersoft.studio.field.label" value="lit_c_invoice_tax_c_invoicetax_taxbaseamt"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_c_invoice_tax"/>
 	</field>
-	<field name="lit_c_order_tax_c_ordertax_taxamt" class="java.math.BigDecimal">
-		<property name="com.jaspersoft.studio.field.label" value="lit_c_order_tax_c_ordertax_taxamt"/>
-		<property name="com.jaspersoft.studio.field.tree.path" value="lit_c_order_tax"/>
+	<field name="lit_c_invoice_tax_c_invoicetax_taxamt" class="java.math.BigDecimal">
+		<property name="com.jaspersoft.studio.field.label" value="lit_c_invoice_tax_c_invoicetax_taxamt"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_c_invoice_tax"/>
 	</field>
+	<field name="lit_c_invoice_tax_c_tax_name" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="lit_c_invoice_tax_c_tax_name"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_c_invoice_tax"/>
+	</field>
+	<field name="lit_c_invoice_tax_c_tax_note" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="lit_c_invoice_tax_c_tax_note"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_c_invoice_tax"/>
+	</field>
+	<field name="lit_c_invoice_tax_c_tax_description" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="lit_c_invoice_tax_c_tax_description"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="lit_c_invoice_tax"/>
+	</field>
+	<variable name="lit_c_invoice_tax_c_invoicetax_taxbaseamt1" class="java.math.BigDecimal" resetType="Column" calculation="Sum">
+		<variableExpression><![CDATA[$F{lit_c_invoice_tax_c_invoicetax_taxbaseamt}]]></variableExpression>
+	</variable>
+	<variable name="lit_c_invoice_tax_c_invoicetax_taxamt1" class="java.math.BigDecimal" resetType="Column" calculation="Sum">
+		<variableExpression><![CDATA[$F{lit_c_invoice_tax_c_invoicetax_taxamt}]]></variableExpression>
+	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
-	<title>
-		<band height="13">
-			<staticText>
-				<reportElement mode="Opaque" x="0" y="0" width="190" height="13" backcolor="#BDBDBD" uuid="ba33b465-ff0c-4632-9507-721204f05962"/>
-				<box>
-					<pen lineWidth="0.5"/>
-				</box>
-				<textElement textAlignment="Center">
-					<font fontName="SansSerif" size="9" isBold="true"/>
-				</textElement>
-				<text><![CDATA[RIEPILOGO IVA]]></text>
-			</staticText>
-		</band>
-	</title>
 	<columnHeader>
 		<band height="10" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
-			<frame>
-				<reportElement mode="Opaque" x="0" y="0" width="190" height="10" backcolor="#BDBDBD" uuid="f42f5990-1f36-4f8a-810e-f403224d90bc">
-					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
+			<staticText>
+				<reportElement x="0" y="0" width="40" height="10" uuid="25199c66-8ec6-4c4c-b730-4f30426fc344">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="93abdc11-a30b-46af-9d72-e30ca66f0ca3"/>
 				</reportElement>
-				<box>
-					<pen lineWidth="0.5"/>
-				</box>
-				<staticText>
-					<reportElement x="0" y="0" width="50" height="10" uuid="76d8c44f-870c-48d3-a25f-8440a7bf3fd7">
-						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="89f35910-8194-491c-a6d7-7648b635a135"/>
-					</reportElement>
-					<box leftPadding="5"/>
-					<textElement textAlignment="Left" verticalAlignment="Middle">
-						<font fontName="SansSerif" size="7"/>
-					</textElement>
-					<text><![CDATA[COD. IVA]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="50" y="0" width="90" height="10" uuid="73fd3d2c-b078-46a8-987c-337d9838162c">
-						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="30e0bfef-4811-4aee-a236-156c2a99ff17"/>
-					</reportElement>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="SansSerif" size="7"/>
-					</textElement>
-					<text><![CDATA[IMPONIBILE]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="140" y="0" width="50" height="10" uuid="5cb0b4c7-a760-4cca-9dd2-111a6fb5bc8e">
-						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c985c3fb-efba-4c7f-b3f1-3fdf314f4258"/>
-					</reportElement>
-					<box rightPadding="5"/>
-					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font fontName="SansSerif" size="7"/>
-					</textElement>
-					<text><![CDATA[IVA]]></text>
-				</staticText>
-			</frame>
+				<box leftPadding="5"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="5" isBold="true"/>
+				</textElement>
+				<text><![CDATA[COD. IVA]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="40" y="0" width="81" height="10" uuid="740063ff-a36d-4b1e-8f7f-3b6a4aa8fe43">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="f3b6d0b2-d480-4940-a759-7ff126502f4e"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="5" isBold="true"/>
+				</textElement>
+				<text><![CDATA[BASE IMPONIBILE]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="121" y="0" width="69" height="10" uuid="861a692b-03e6-43a2-a3ec-ad6aced8a24c">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="099b8035-ac39-4ad8-be8d-e0ca8b40fdde"/>
+				</reportElement>
+				<box rightPadding="5"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="5" isBold="true"/>
+				</textElement>
+				<text><![CDATA[IMPOSTA]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="10">
+		<band height="11" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
-			<frame>
-				<reportElement x="0" y="0" width="190" height="10" uuid="6fccc0b9-e385-4081-8ecb-4e1b8efe2d38">
-					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.spreadsheet.SpreadsheetLayout"/>
+			<textField>
+				<reportElement x="0" y="0" width="40" height="11" uuid="0513cafa-b75b-455c-867b-043e78cde486">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="93abdc11-a30b-46af-9d72-e30ca66f0ca3"/>
 				</reportElement>
-				<box>
-					<pen lineWidth="0.5"/>
-					<topPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="0.5" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textField>
-					<reportElement x="0" y="0" width="50" height="10" uuid="c430c7cf-2ea4-4c0f-986c-38043d429ec1">
-						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="89f35910-8194-491c-a6d7-7648b635a135"/>
-					</reportElement>
-					<box leftPadding="5"/>
-					<textElement verticalAlignment="Middle">
-						<font fontName="SansSerif" size="7"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{lit_c_order_tax_c_tax_taxindicator}]]></textFieldExpression>
-				</textField>
-				<textField>
-					<reportElement x="50" y="0" width="90" height="10" uuid="9a18670e-a371-4d85-83a6-293198af0831">
-						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="30e0bfef-4811-4aee-a236-156c2a99ff17"/>
-					</reportElement>
-					<textElement textAlignment="Center" verticalAlignment="Middle">
-						<font fontName="SansSerif" size="7"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{lit_c_order_tax_c_ordertax_taxbaseamt}]]></textFieldExpression>
-				</textField>
-				<textField>
-					<reportElement x="140" y="0" width="50" height="10" uuid="240f5605-4032-4667-b260-f7b84b4c586d">
-						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c985c3fb-efba-4c7f-b3f1-3fdf314f4258"/>
-					</reportElement>
-					<box rightPadding="5"/>
-					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font fontName="SansSerif" size="7"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{lit_c_order_tax_c_ordertax_taxamt}]]></textFieldExpression>
-				</textField>
-			</frame>
+				<box leftPadding="5"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{lit_c_invoice_tax_c_tax_taxindicator}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="40" y="0" width="81" height="11" uuid="4c5a8d9b-9292-453b-88a5-399d1f2dc84e">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="f3b6d0b2-d480-4940-a759-7ff126502f4e"/>
+				</reportElement>
+				<box rightPadding="5"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{lit_c_invoice_tax_c_invoicetax_taxbaseamt}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="121" y="0" width="69" height="11" uuid="ccc5731b-d771-4ae6-8b8c-e25a2c643363">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="099b8035-ac39-4ad8-be8d-e0ca8b40fdde"/>
+				</reportElement>
+				<box rightPadding="5"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{lit_c_invoice_tax_c_invoicetax_taxamt}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 </jasperReport>
